Main page: update colors, fonts, layout and spacing; icons no longer use font awesome

--- a/AJFIlfovWebsite/wwwroot/css/Common/common.css
+++ b/AJFIlfovWebsite/wwwroot/css/Common/common.css
@@ -1,35 +1,34 @@
 @charset "UTF-8";
 
 :root {
-    --font-primary: "Teko", sans-serif;
+    --font-primary: "Funnel Display", serif;
     --font-secondary: serif;
 
-    /* --color-primary-4: #0b0b0b;
-    --color-primary-3: #0c0942;
-    --color-primary-2: #001c3d; */
-    --color-primary: #171837;
+    /* --color-primary-4: #0b0b0b; */
+    /* --color-primary-3: #0c0942; */
+    /* --color-primary-2: #001c3d; */
+    /* --color-primary: #171837; */
+    --color-primary: #d1d1d1;
     --color-primary-alt: #0b0b0b;
     --color-primary-hover: #555555;
     --color-on-primary: #fefefe;
     --color-on-primary-hover: #ffffff;
-
     --color-secondary: #de4c3f;
     --color-secondary-hover: #d62828;
     --color-on-secondary: #fefefe;
     --color-on-secondary-hover: #ffffff;
-    
     --color-surface: #d1d1d1;
     --color-surface-inverse: #0f0f0f;
     --color-on-surface: #0f0f0f;
     --color-on-surface-inverse: #d1d1d1;
     --color-scrim-big: rgba(50, 50, 50, 0.5);
     --color-scrim-medium: rgba(0, 0, 0, 0.85);
-    --color-scrim-small: rgba(0, 0, 0, 0.5);
-    --color-shadow: rgba(0, 0, 0, 0.1);
+    --color-scrim-small: rgba(0, 0, 0, 0.7);
+    --color-shadow: rgba(10, 10, 10, 0.5);
 
-    --radius-small: 0.4rem;
-    --radius-big: 1rem;
-
+    --radius-small: 0.2rem;
+    --radius-big: 0.4rem;
+    
     --blur: 80px;
 }
 
@@ -46,10 +45,19 @@ body {
 }
 
 body {
-    font-family: var(--font-primary), sans-serif;
+    font-family: var(--font-primary);
     background-color: var(--color-primary);
     overflow-x: hidden;
     width: 100vw;
+    /* IE and Edge */
+    -ms-overflow-style: none;
+    /* Firefox */
+    scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+    /* Chrome, Safari and Opera */
+    display: none;
 }
 
 a {
@@ -107,6 +115,11 @@ header {
     }
 
 .header-menu-toggle {
+    width: 2rem;
+    height: 2rem;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='%23ffffff'%3E%3Cpath d='M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z'/%3E%3C/svg%3E");
+    background-position: center;
+    background-repeat: no-repeat;
     display: block;
     color: var(--color-on-surface-inverse);
     font-size: 1.5rem;
@@ -119,7 +132,7 @@ nav {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: var(--color-primary);
+    background-color: var(--color-surface-inverse);
     position: absolute;
     top: 0;
     right: 0;
@@ -136,7 +149,7 @@ nav {
     }
 
     nav a {
-        color: var(--color-on-primary);
+        color: var(--color-on-surface-inverse);
         text-decoration: none;
         font-size: 1.5rem;
     }
